SKRIT-265: Fix study navbar height on smaller devices.

--- a/app/components/navbars/NavbarMobileStudy.scss
+++ b/app/components/navbars/NavbarMobileStudy.scss
@@ -20,6 +20,7 @@ bootstrap-navbar[data-name='mobile'] {
     float: right;
     font-size: 24px;
     margin-top: 9px;
+    position: absolute;
 
     span {
       margin-left: 25px;
